# goblin-workshop

./: .gitignore  LICENSE  README.md  goblin-workshop.cabal
app/: Main.hs
app/Examples/: 1.hs  2.hs
app/Samples/: 1.hs  2.hs
src/Goblin/: Workshop.hs
src/Goblin/Workshop/: Bus.hs  Dispatcher.hs  Graph.hs  Result.hs  Scheduler.hs  Task.hs  TaskResult.hs  TaskRunner.hs  TaskScheduler.hs  Types.hs  Util.hs  Workshop.hs
src/Goblin/Workshop/Bus/: Dispatcher.hs  Scheduler.hs  Task.hs
test/: Spec.hs
test/Tests/Goblin/Workshop/: Graph.hs
