name:                goblin-workshop
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/y-usuzumi/goblin-workshop#readme
license:             BSD3
license-file:        LICENSE
author:              Yukio Usuzumi
maintainer:          anohigisavay@gmail.com
copyright:           BSD
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Goblin.Workshop.Bus
                     , Goblin.Workshop.Task
                     , Goblin.Workshop.TaskResult
                     , Goblin.Workshop.TaskRunner
                     , Goblin.Workshop.TaskScheduler
                     , Goblin.Workshop.Workshop
                     , Lib
  build-depends:       base >= 4.7 && < 5
                     , async
                     , containers
                     , mtl
  default-language:    Haskell2010
  default-extensions:  ExistentialQuantification
                     , FlexibleInstances
                     , GADTs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , RankNTypes
                     , RecordWildCards

executable goblin-workshop-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , goblin-workshop
  default-language:    Haskell2010

test-suite goblin-workshop-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , goblin-workshop
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/y-usuzumi/goblin-workshop
