name:                goblin-workshop
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/y-usuzumi/goblin-workshop#readme
license:             BSD3
license-file:        LICENSE
author:              Yukio Usuzumi
maintainer:          anohigisavay@gmail.com
copyright:           BSD
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Goblin.Workshop
                     , Goblin.Workshop.Bus
                     , Goblin.Workshop.Bus.Dispatcher
                     , Goblin.Workshop.Bus.Scheduler
                     , Goblin.Workshop.Dispatcher
                     , Goblin.Workshop.Graph
                     , Goblin.Workshop.Result
                     , Goblin.Workshop.Scheduler
                     , Goblin.Workshop.Task
                     , Goblin.Workshop.Workshop
  build-depends:       base >= 4.7 && < 5
                     , async
                     , containers
                     , hslogger
                     , mtl
                     , stm
                     , vector
  default-language:    Haskell2010
  default-extensions:  ExistentialQuantification
                     , FlexibleInstances
                     , GADTs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards

executable goblin-workshop-sample-1
  hs-source-dirs:      app/Samples
  main-is:             1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , goblin-workshop
                     , hslogger
  default-language:    Haskell2010

executable goblin-workshop-sample-2
  hs-source-dirs:      app/Samples
  main-is:             2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , goblin-workshop
                     , brick
                     , containers
                     , hslogger
                     , vty
  default-language:    Haskell2010
                       
test-suite goblin-workshop-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Tests.Goblin.Workshop.Graph
  main-is:             Spec.hs
  build-depends:       base
                     , goblin-workshop
                     , containers
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/y-usuzumi/goblin-workshop
